<resources>
    <string name="app_name">Login</string>
    <string name="resetarsenha">Esqueci a Senha</string>
    <string name="criarconta">Criar Conta</string>
    <string name="btnLogin">Login</string>
    <string name="btnCriarConta">Criar Conta</string>
    <string name="ButtonBackLogin">Já tenho Cadastro</string>
    <string name="buttonSair">Sair da Conta</string>
    <string name="buttonEnviarToken">Enviar</string>
    <string name="buttonResetarSenha">Resetar Senha</string>
    <string name="buttonTenhoToken">Tenho a Chave</string>
    <string name="buttonBack">Login</string>
    <string name="buttonBackToken">Chave</string>
    <string name="textValidateToken">Validade da Chave</string>
    <string name="textDigiteEmail">Prencha o campo abaixo com e-mail para receber a chave de reset de senha em seu e-mail ou SMS.</string>

    <!--Strings "title" para Toolbar-->
    <string name="titleCadastro">Cadastro</string>
    <string name="titleResetToken">Solicitar Chave</string>
    <string name="titleResetSenha">Nova Senha</string>

    <!--Strings para Toast-->
    <string name="login_sucesso">Login Feito com sucesso!</string>
    <string name="usuario_criado">Usuário criado com sucesso!</string>
    <string name="reset_senha">Nova senha Definida!</string>
    <string name="envio_token">Chave Enviada com sucesso!</string>
    <string name="erro_geral">Erro, tente novamente!</string>
    <string name="logout">Logout Realizado!</string>
    <string name="erro_requisicao">Erro ao obter requisição, tente novamente!</string>


    <!--Strings Timer-->
    <string name="token_expirado">Chave Expirada</string>
    <string name="reenviar_token">Reenviar Chave</string>
</resources>