<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="190dp"
        android:layout_height="154dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img" />

    <EditText
        android:id="@+id/id_edit_Email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:inputType="textEmailAddress"
        android:hint="E-mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/id_edit_Senha"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:inputType="textPassword"
        android:hint="Senha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_edit_Email" />

    <TextView
        android:id="@+id/id_text_ResetarSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/resetarsenha"
        app:layout_constraintStart_toStartOf="@+id/id_edit_Senha"
        app:layout_constraintTop_toBottomOf="@+id/id_edit_Senha" />

    <TextView
        android:id="@+id/id_text_CriarConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/criarconta"
        app:layout_constraintEnd_toEndOf="@+id/id_edit_Senha"
        app:layout_constraintTop_toBottomOf="@+id/id_edit_Senha" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/id_button_login"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/container_button_login"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/btnLogin"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="Desenvolvido por Fernando Machado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
